@@ -19,20 +19,3 @@ asasm_SOURCES=area.c asm.c code.c commands.c decode.c depend.c error.c \
 	riscos_c.c storage.c strdup.c symbol.c targetcpu.c \
 	value.c variables.c whileif.c
 
-tooldir = $(exec_prefix)/$(target_alias)
-
-.PHONY: install-exec-local
-
-# Local install exec hook to install a copy of asasm copy in <target>/bin
-# directory where gcc's collect2 will look.
-install-exec-local: $(bin_PROGRAMS)
-	$(mkdir_p) "$(DESTDIR)$(tooldir)/bin"
-	list='$(bin_PROGRAMS)'; for p in $$list; do \
-	  p1=`echo $$p|sed 's/$(EXEEXT)$$//'`; \
-	  if test -f $$p; then \
-	    f=`echo "$$p1" | sed 's,^.*/,,;$(transform);s/$$/$(EXEEXT)/'`; \
-	    rm -f $(DESTDIR)$(tooldir)/bin/$$f; \
-	    ln $(DESTDIR)$(bindir)/$$p $(DESTDIR)$(tooldir)/bin/$$f >/dev/null 2>/dev/null \
-	    || $(INSTALL_PROGRAM_ENV) $(binPROGRAMS_INSTALL) "$$p" "$(DESTDIR)$(tooldir)/bin/$$f" || exit 1; \
-	  else :; fi; \
-	done
